--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Angular_practice": "node dist/angular-practice/server/server.mjs"
+    "serve:ssr:angular_practice": "node dist/angular-practice/server/server.mjs"
   },
   "private": true,
   "dependencies": {
